# synapse-mcp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  simple_client.cpp  simple_server.cpp
include/synapse/: client.hpp  mcp.hpp  process_transport.hpp  protocol.hpp  server.hpp  sse_transport.hpp  transport.hpp
tests/: CMakeLists.txt  main.cpp
